# pointcloud_surface

./: CMakeLists.txt  CODEOWNERS  README.md  package.xml
include/pointcloud_surface/: ceres_parameters.hpp  ground_surface.hpp  ground_surface_estimation.hpp  ground_surface_estimation_base.hpp  ground_surface_estimation_common_parameters.hpp  ground_surface_estimation_constant.hpp  ground_surface_estimation_factory.hpp  ground_surface_estimation_geman_mcclure.hpp  ground_surface_estimation_parameters.hpp  ground_surface_estimation_truncated_least_squares.hpp  ground_surface_io.hpp  ground_surface_plane.hpp  ground_surface_plane_representation.hpp  ground_surface_point_distance.hpp  ground_surface_point_filter.hpp  ground_surface_point_label.hpp  ground_surface_polynomial.hpp  ground_surface_polynomial_representation.hpp  (+12 more)
res/: parameters.yaml
src/: ceres_parameters.cpp  ground_surface_estimation.cpp  ground_surface_estimation_base.cpp  ground_surface_estimation_common_parameters.cpp  ground_surface_estimation_constant.cpp  ground_surface_estimation_factory.cpp  ground_surface_estimation_geman_mcclure.cpp  ground_surface_estimation_parameters.cpp  ground_surface_estimation_truncated_least_squares.cpp  ground_surface_uniform_b_spline.cpp  none.cpp  plane_estimation_ceres.cpp  plane_estimation_sac.cpp  plane_estimation_sac_parameters.cpp  point_labelers.cpp  polynomial_estimation_ceres.cpp  uniform_b_spline_estimation.cpp  uniform_b_spline_estimation_ceres.cpp  uniform_b_spline_estimation_eigen.cpp  uniform_b_spline_estimation_parameters.cpp
test/: pointcloud_surface.cpp
